--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -1395,7 +1395,7 @@ input, select, textarea {
 			position: absolute;
 			top: 0;
 			left: calc(50% - 1px);
-			width: 0.5px; /* Edited. Was: 1px */
+			width: 1px;
 			height: 100%;
 			background: #ffffff;
 		}
